[project]
name = "mcp_server_ros_2"
version = "0.1.0"
description = "MCP Server for ROS 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "PyYAML>=6.0",
    "lark>=1.1.5",
    "numpy>=1.26",
    "python-dateutil>=2.8",
]
[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = { find = {} }